# cosmos-commander

./: Cargo.toml  README.md  Todo.md  justfile
debian/: changelog  control  copyright  rules
examples/: copy.rs  desktop.rs  dialog.rs
i18n/de/: commander.ftl  cosmic_commander.ftl  cosmos_commander.ftl
i18n/en/: commander.ftl  cosmic_commander.ftl  cosmos_commander.ftl
i18n/sv/: commander.ftl
res/: Commandermetainfo.xml  CosmicCommander.desktop  CosmicCommandermetainfo.xml  CosmosCommander.desktop  CosmosCommandermetainfo.xml  eu.fangornsrealm.Commander.desktop  eu.fangornsrealm.Commander.metainfo.xml  eu.fangornsrealm.commander.desktop
res/icons/hicolor/32x32/apps/: eu.fangornsrealm.commander.svg~
src/: app.rs  commanderpanegrid.rs  config.rs  dialog.rs  key_bind.rs  lib.rs  main.rs  menu.rs  mouse_area.rs  tab.rs  tab1.rs  tab2.rs  terminal.rs  terminal_box.rs  terminal_theme.rs
src/mounter/: gvfs.rs  mod.rs
src/operation/: mod.rs
src/pane_grid/: axis.rs  content.rs  controls.rs  draggable.rs  element.rs  mod.rs  node.rs  state.rs  title_bar.rs
