[package]
name = "commander"
version = "0.1.0"
authors = ["Alexander Schwarzkopf <progs@fangornsrealm.eu>"]
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.71"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", rev = "cacdb5bb3b72bad2c729227537979d95af75978f" }
chrono = { version = "0.4", features = ["unstable-locales"] }
cosmic-mime-apps = { git = "https://github.com/pop-os/cosmic-mime-apps.git", optional = true }
dirs = "6.0.0"
env_logger = "0.11"
freedesktop_entry_parser = "1.3"
gio = { version = "0.20", optional = true }
glib = { version = "0.20", optional = true }
glob = "0.3"
hex_color = { version = "3", features = ["serde"] }
icu_collator = "1.5"
icu_provider = { version = "1.5", features = ["sync"] }
ignore = "0.4"
image = "0.25"
indexmap = "2.7.1"
itertools = "0.14.0"
libc = "0.2"
log = "0.4"
mime_guess = "2"
notify-debouncer-full = "0.3"
notify-rust = { version = "4", optional = true }
num_cpus = "1.16.0"
once_cell = "1.19"
open = "5.0.2"
palette = { version = "0.7", features = ["serde"] }
paste = "1.0"
regex = "1"
rustc-hash = "2.1.1"
serde = { version = "1", features = ["serde_derive"] }
shlex = { version = "1.3" }
tempfile = "3"
tikv-jemallocator = { version = "0.6", optional = true }
tokio = { version = "1", features = ["process", "sync"] }
trash = { git = "https://github.com/jackpot51/trash-rs.git", branch = "cosmic" }
url = "2.5"
walkdir = "2.5.0"
wayland-client = { version = "0.31.8", optional = true }
xdg = { version = "2.5.2", optional = true }
xdg-mime = "0.4.0"
# Compression
bzip2 = { version = "0.5.1", optional = true } #TODO: replace with pure Rust crate
flate2 = "1.0"
liblzma = { version = "0.3.6", optional = true } #TODO: replace with pure Rust crate
tar = "0.4.44"
# Internationalization
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
rust-embed = "8"
slotmap = "1.0.7"
recently-used-xbel = "1.1.0"
zip = "2.1.6"
unix_permissions_ext = "0.1.2"
uzers = "0.12.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
#TODO: a11y feature crashes
features = ["multi-window", "tokio", "winit"]

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
features = ["monospace_fallback", "shape-run-cache"]

[features]
default = ["bzip2", "desktop", "gvfs", "liblzma", "notify", "wgpu"]
desktop = ["libcosmic/desktop", "dep:cosmic-mime-apps", "dep:xdg"]
gvfs = ["dep:gio", "dep:glib"]
jemalloc = ["dep:tikv-jemallocator"]
notify = ["dep:notify-rust"]
wayland = ["libcosmic/wayland", "dep:wayland-client"]
wgpu = ["libcosmic/wgpu"]

[profile.dev]
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[target.'cfg(unix)'.dependencies]
fork = "0.2.0"

[dev-dependencies]
# cap-std = "3"
# cap-tempfile = "3"
fastrand = "2"
test-log = "0.2.17"
tokio = { version = "1", features = ["rt", "macros"] }

[patch.crates-io]
# https://github.com/alexcrichton/filetime/pull/104
filetime = { git = "https://github.com/jackpot51/filetime" }

# [patch.'https://github.com/pop-os/cosmic-text']
# cosmic-text = { path = "../cosmic-text" }

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# [patch.'https://github.com/pop-os/smithay-clipboard']
# smithay-clipboard = { path = "../smithay-clipboard" }

